--- a/Exchange/Exchange/Base.lproj/Main.storyboard
+++ b/Exchange/Exchange/Base.lproj/Main.storyboard
@@ -540,7 +540,7 @@
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="137" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="C3L-he-DNd">
                                 <rect key="frame" x="20" y="94" width="560" height="506"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileCell" rowHeight="137" id="N4g-fr-44c" customClass="ProfileCell" customModule="Exchange" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="560" height="137"/>
@@ -622,7 +622,7 @@
                                             <constraint firstAttribute="width" constant="86" id="lwf-mU-4gS"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c5X-nX-xbB">
@@ -649,7 +649,7 @@
                                             <constraint firstAttribute="height" constant="21" id="Fns-Y6-Woq"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M9c-jU-wfa">
@@ -728,14 +728,27 @@
                                     <constraint firstAttribute="height" constant="48" id="ktc-VE-osX"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PPc-yM-z71">
+                                <rect key="frame" x="20" y="20" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="AXO-R1-b2x"/>
+                                    <constraint firstAttribute="height" constant="30" id="sBy-TP-g3X"/>
+                                </constraints>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="goBack:" destination="zrT-bu-c0P" eventType="touchUpInside" id="tlA-bf-9wV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.81568627450980391" green="0.82352941176470584" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="DCp-1H-wsf" firstAttribute="top" secondItem="t6L-I3-hXs" secondAttribute="bottom" constant="29" id="71z-9d-I3i"/>
                             <constraint firstAttribute="trailingMargin" secondItem="t6L-I3-hXs" secondAttribute="trailing" constant="-20" id="KSG-TN-qrZ"/>
                             <constraint firstItem="DCp-1H-wsf" firstAttribute="centerX" secondItem="jk0-tg-g4n" secondAttribute="centerX" id="VLB-Ua-rDA"/>
+                            <constraint firstItem="PPc-yM-z71" firstAttribute="leading" secondItem="jk0-tg-g4n" secondAttribute="leadingMargin" id="ZyH-Bm-9BK"/>
                             <constraint firstItem="t6L-I3-hXs" firstAttribute="leading" secondItem="jk0-tg-g4n" secondAttribute="leadingMargin" constant="-20" id="aWH-eY-4SJ"/>
                             <constraint firstItem="lxY-fH-Htb" firstAttribute="centerX" secondItem="jk0-tg-g4n" secondAttribute="centerX" id="fOA-dD-3pr"/>
+                            <constraint firstItem="PPc-yM-z71" firstAttribute="top" secondItem="4sT-ox-7yS" secondAttribute="bottom" id="hqp-al-uV9"/>
                             <constraint firstItem="lxY-fH-Htb" firstAttribute="top" secondItem="DCp-1H-wsf" secondAttribute="bottom" constant="29" id="mAD-fq-sSR"/>
                             <constraint firstItem="t6L-I3-hXs" firstAttribute="top" secondItem="4sT-ox-7yS" secondAttribute="bottom" constant="70" id="r33-pE-H5o"/>
                         </constraints>
