--- a/Exchange/Exchange/Base.lproj/Main.storyboard
+++ b/Exchange/Exchange/Base.lproj/Main.storyboard
@@ -574,7 +574,7 @@
             </objects>
             <point key="canvasLocation" x="3226" y="364"/>
         </scene>
-        <!--Connections-->
+        <!--Connections View Controller-->
         <scene sceneID="f25-6v-3MR">
             <objects>
                 <viewController id="Vjt-bg-tPc" customClass="ConnectionsViewController" customModule="Exchange" customModuleProvider="target" sceneMemberID="viewController">
@@ -586,7 +586,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="xhN-wf-6yr">
+                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xhN-wf-6yr">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="KAt-FN-KDZ"/>
@@ -601,7 +601,7 @@
                                     <constraint firstAttribute="height" constant="21" id="pb7-L6-iVx"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="120" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="KK1-zC-rg5">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="120" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="KK1-zC-rg5">
                                 <rect key="frame" x="30" y="64" width="540" height="536"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
@@ -668,14 +668,33 @@
                             <constraint firstAttribute="trailingMargin" secondItem="sON-ec-kjH" secondAttribute="trailing" constant="-20" id="r6J-tV-Ilb"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Connections" id="hoe-Sy-CPT"/>
+                    <navigationItem key="navigationItem" id="baI-7F-LFB"/>
                     <connections>
                         <outlet property="tableView" destination="KK1-zC-rg5" id="4gL-ye-6vi"/>
+                        <segue destination="LNy-UA-l3O" kind="show" identifier="OpenProfile" id="dpJ-VZ-ikY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K7x-5d-eF9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1660" y="1338"/>
+            <point key="canvasLocation" x="1650" y="2157"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="XNB-Gs-cRu">
+            <objects>
+                <viewController id="ef6-7G-AST" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kOn-Fv-PSx"/>
+                        <viewControllerLayoutGuide type="bottom" id="dWN-TH-A1O"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4Ia-2k-6VK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qec-E0-Fxt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1650" y="2918"/>
         </scene>
         <!--Settings-->
         <scene sceneID="Gbm-hQ-PHW">
@@ -844,7 +863,7 @@
                         <segue destination="WGA-j9-JgN" kind="relationship" relationship="viewControllers" id="xIs-gG-Cq2"/>
                         <segue destination="LNy-UA-l3O" kind="relationship" relationship="viewControllers" id="wZ7-ZG-72J"/>
                         <segue destination="zrT-bu-c0P" kind="relationship" relationship="viewControllers" id="wZp-E4-G0c"/>
-                        <segue destination="Vjt-bg-tPc" kind="relationship" relationship="viewControllers" id="zsz-kY-wVR"/>
+                        <segue destination="pYb-P1-Asz" kind="relationship" relationship="viewControllers" id="dYf-8g-Xgh"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vGL-p5-jda" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -866,8 +885,12 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gNW-vp-mBh">
                                 <rect key="frame" x="-4" y="0.0" width="383" height="64"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O72-km-Oot">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O72-km-Oot">
                                         <rect key="frame" x="329" y="26" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="c3s-Qd-9bU"/>
+                                            <constraint firstAttribute="width" constant="46" id="l1d-y1-0jJ"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                         <state key="normal" title="Edit">
                                             <color key="titleColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
@@ -876,10 +899,28 @@
                                             <action selector="showEdit:" destination="LNy-UA-l3O" eventType="touchUpInside" id="GgF-mF-pr9"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B0j-oh-pXH">
+                                        <rect key="frame" x="8" y="26" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="46" id="C39-Ko-BON"/>
+                                            <constraint firstAttribute="height" constant="30" id="aCl-v0-9W6"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <state key="normal" title="Back">
+                                            <color key="titleColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="goBack:" destination="LNy-UA-l3O" eventType="touchUpInside" id="dcs-hv-sqR"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="B0j-oh-pXH" secondAttribute="bottom" constant="8" id="GqB-GP-Srn"/>
+                                    <constraint firstAttribute="trailing" secondItem="O72-km-Oot" secondAttribute="trailing" constant="8" id="nPB-bN-4gy"/>
+                                    <constraint firstItem="B0j-oh-pXH" firstAttribute="leading" secondItem="gNW-vp-mBh" secondAttribute="leading" constant="8" id="q6x-vg-kFZ"/>
                                     <constraint firstAttribute="height" constant="64" id="svE-ge-uRz"/>
+                                    <constraint firstAttribute="bottom" secondItem="O72-km-Oot" secondAttribute="bottom" constant="8" id="zNw-AY-Oj7"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cwo-e6-SgJ">
@@ -1101,6 +1142,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="aboutTextView" destination="4cz-NV-Urb" id="O9n-Ht-ChZ"/>
+                        <outlet property="backButton" destination="B0j-oh-pXH" id="BYJ-9C-Vc0"/>
                         <outlet property="companyField" destination="5OE-Ed-fcK" id="gDc-DV-Zhf"/>
                         <outlet property="companyLeading" destination="DPT-U0-gDP" id="9zB-8I-U7M"/>
                         <outlet property="contactInfoButton" destination="Z6k-kB-Nii" id="aGT-qK-aRq"/>
@@ -1116,11 +1158,32 @@
                         <outlet property="positionLeading" destination="wna-Jt-EhC" id="rln-yC-c0J"/>
                         <outlet property="profileBackView" destination="cwo-e6-SgJ" id="sHd-ti-66C"/>
                         <outlet property="profileImageView" destination="ekH-Xf-W2X" id="t6u-oh-BnL"/>
+                        <segue destination="Amc-sA-geZ" kind="unwind" identifier="ExitProfile" unwindAction="unwindToConnections:" id="Ywv-eD-Ksb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4ES-Uw-7j2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Amc-sA-geZ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1030.5" y="1371.5"/>
+        </scene>
+        <!--Connections-->
+        <scene sceneID="b4d-qu-ZI8">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="pYb-P1-Asz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Connections" id="hoe-Sy-CPT"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ybS-cd-EBr">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Vjt-bg-tPc" kind="relationship" relationship="rootViewController" id="l3p-PO-1Tx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lpi-S4-ns1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1650" y="1338"/>
         </scene>
     </scenes>
     <resources>
@@ -1129,7 +1192,8 @@
         <image name="PhoneIcon" width="1200" height="1200"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="wZ7-ZG-72J"/>
         <segue reference="1I9-H5-GhK"/>
-        <segue reference="YEd-1d-oiK"/>
+        <segue reference="3GR-6J-loK"/>
     </inferredMetricsTieBreakers>
 </document>
