--- a/Exchange/Exchange/Base.lproj/Main.storyboard
+++ b/Exchange/Exchange/Base.lproj/Main.storyboard
@@ -280,73 +280,89 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vlE-YX-tSM">
-                                <rect key="frame" x="534" y="28" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dm2-BH-dEH">
+                                <rect key="frame" x="273" y="72" width="54" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="5uZ-aw-QOe"/>
-                                    <constraint firstAttribute="width" constant="46" id="h9J-RV-4CJ"/>
+                                    <constraint firstAttribute="height" constant="30" id="Aij-ZI-PRS"/>
+                                    <constraint firstAttribute="width" constant="54" id="g8S-y5-KAu"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <state key="normal" title="No App">
+                                    <color key="titleColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
-                                    <segue destination="6L2-MX-f2o" kind="show" id="YeG-U8-vlX"/>
+                                    <segue destination="bn0-0b-lbu" kind="show" id="Fi8-cW-UUK"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="vlE-YX-tSM" firstAttribute="trailing" secondItem="1qz-sj-lXm" secondAttribute="trailingMargin" id="Noj-xj-qeD"/>
-                            <constraint firstItem="vlE-YX-tSM" firstAttribute="top" secondItem="AsN-Zi-fd7" secondAttribute="bottom" constant="8" id="bzu-Yv-gUK"/>
+                            <constraint firstItem="Dm2-BH-dEH" firstAttribute="top" secondItem="AsN-Zi-fd7" secondAttribute="bottom" constant="8" id="LHY-BX-5yC"/>
+                            <constraint firstItem="Dm2-BH-dEH" firstAttribute="centerX" secondItem="1qz-sj-lXm" secondAttribute="centerX" id="WSl-kt-8xd"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Exchange" id="lSC-B4-qkD"/>
+                    <navigationItem key="navigationItem" id="0Ju-eU-Y6v"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w9T-W8-rVv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2476" y="494"/>
+            <point key="canvasLocation" x="316" y="2229"/>
         </scene>
-        <!--Test View Controller-->
-        <scene sceneID="FgN-wB-KgP">
+        <!--No App View Controller-->
+        <scene sceneID="TQr-pa-kZ4">
             <objects>
-                <viewController id="6L2-MX-f2o" customClass="TestViewController" customModule="Exchange" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bn0-0b-lbu" customClass="NoAppViewController" customModule="Exchange" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="tD3-3b-cFg"/>
-                        <viewControllerLayoutGuide type="bottom" id="brF-If-qWs"/>
+                        <viewControllerLayoutGuide type="top" id="2KQ-CN-w8O"/>
+                        <viewControllerLayoutGuide type="bottom" id="Jdm-YF-wwB"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="K9g-sL-Pxr">
+                    <view key="view" contentMode="scaleToFill" id="BVE-wc-1vu">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M7T-qB-4dJ">
-                                <rect key="frame" x="445" y="293" width="97" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Test" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eFh-en-pT2" customClass="AkiraTextField" customModule="Exchange" customModuleProvider="target">
-                                <rect key="frame" x="199" y="277" width="203" height="46"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
-                                        <color key="value" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                        <color key="value" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="placeholderFontScale">
-                                        <real key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8hE-YD-FDH">
+                                <rect key="frame" x="28" y="278" width="544" height="45"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="ZBR-U1-BOT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                 <connections>
-                                    <outlet property="delegate" destination="6L2-MX-f2o" id="4Pe-VL-Nqy"/>
+                                    <outlet property="delegate" destination="bn0-0b-lbu" id="uCb-P4-5D9"/>
                                 </connections>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1s3-HL-BIW">
+                                <rect key="frame" x="250" y="331" width="100" height="45"/>
+                                <color key="backgroundColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="67k-2V-iPV"/>
+                                    <constraint firstAttribute="height" constant="45" id="oLk-Ct-LT6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Send Info">
+                                    <color key="titleColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendInfo:" destination="bn0-0b-lbu" eventType="touchUpInside" id="Dxv-9J-F46"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="1s3-HL-BIW" firstAttribute="centerX" secondItem="BVE-wc-1vu" secondAttribute="centerX" id="4tP-eq-9DH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="8hE-YD-FDH" secondAttribute="trailing" constant="8" id="Iks-2T-shn"/>
+                            <constraint firstItem="8hE-YD-FDH" firstAttribute="centerY" secondItem="BVE-wc-1vu" secondAttribute="centerY" id="dho-f8-jaD"/>
+                            <constraint firstItem="1s3-HL-BIW" firstAttribute="top" secondItem="8hE-YD-FDH" secondAttribute="bottom" constant="8" id="uTZ-Kl-T8X"/>
+                            <constraint firstItem="8hE-YD-FDH" firstAttribute="leading" secondItem="BVE-wc-1vu" secondAttribute="leadingMargin" constant="8" id="xPt-8d-dgu"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="phoneField" destination="8hE-YD-FDH" id="OV4-NR-ZgT"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="46P-Nm-NBr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eIp-dg-Pj6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3222" y="494"/>
+            <point key="canvasLocation" x="316" y="3036"/>
         </scene>
         <!--Settings-->
         <scene sceneID="Y9R-qo-TZt">
@@ -726,7 +742,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K7x-5d-eF9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1650" y="2157"/>
+            <point key="canvasLocation" x="2462" y="2157"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="MgY-co-Z11">
@@ -738,10 +754,10 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="WGA-j9-JgN" kind="relationship" relationship="viewControllers" id="xIs-gG-Cq2"/>
                         <segue destination="LNy-UA-l3O" kind="relationship" relationship="viewControllers" id="wZ7-ZG-72J"/>
                         <segue destination="pYb-P1-Asz" kind="relationship" relationship="viewControllers" id="dYf-8g-Xgh"/>
                         <segue destination="Y2q-4D-b43" kind="relationship" relationship="viewControllers" id="qED-ec-nDL"/>
+                        <segue destination="UaD-Ai-gUU" kind="relationship" relationship="viewControllers" id="xqm-A5-Zdn"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vGL-p5-jda" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1134,6 +1150,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lpi-S4-ns1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1650" y="1338"/>
+        </scene>
+        <!--Exchange-->
+        <scene sceneID="rGN-hG-dBd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UaD-Ai-gUU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Exchange" id="lSC-B4-qkD"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zlN-rH-FS2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WGA-j9-JgN" kind="relationship" relationship="rootViewController" id="hKf-kZ-Aov"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Th-l7-sAm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="316" y="1338"/>
         </scene>
     </scenes>
     <resources>
